[project]
name = "cursor-usage-tracker"
version = "0.1.0"
description = "macOS menu bar app to track and predict Cursor usage limits"
requires-python = ">=3.9"
dependencies = [
    "rumps>=0.4.0",
    "pyobjc-framework-Cocoa>=10.0",
]

[project.optional-dependencies]
dev = [
    "py2app>=0.28.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

